# claude-cat

./: .gitignore  README.md  TODO.md  build.js  cat.ts  edit-eyes.py  edit-sprite.py  package.json  pyproject.toml  tsconfig.json  view-sprite.py
src/: index.ts
src/claude_cat/: __init__.py  __main__.py  cat.py  litter.py  log.py  registry.py  shared.py  sprites.py  unified.py  wrapper.py
src/claude_cat/sprites/: default.json
tests/: test_state_machine.py  test_unified.py
